with graphvix dot query